# serde-nothing

./: COPYING  Cargo.toml  README.md
license/: APACHE  MIT
src/: de.rs  lib.rs  ser.rs
